frontend/core/src/main/webapp/static/less/pages.less
/*
Every mixin here should cover only a single page view. If it affects more than it, it should be in components.less.
*/

// COMMON

// LOGIN / SIGNUP / LAUNCH

@login-content-height: @vertical-grid*5.1;

section#login, section#signup, section#launch, section#waiting, section#forgot, section#verify {
  .column {
    overflow-y: auto;
    .banner {
      padding-bottom: @vertical-grid / 10;
      span {
        width: 200px;
        display: block;
        text-align: center;
        .center-horizontally;
      }
      // Make content a "sticky footer"
      min-height: 100%;
      margin-bottom: -@login-content-height;
      padding-top: @vertical-grid * 1.5;
    }
    .banner:after {
      content: "";
      display: block;
      height: @login-content-height;
    }
    .content {
      height: @login-content-height;
      .button-container {
        padding-top: @vertical-grid / 2;
        padding-bottom: @vertical-grid / 2;
      }
    }
  }
  .icon-logo-with-text {
    padding-bottom: 25px;
  }
}

section#waiting {
  .column {
    .banner {
      margin-bottom: -@vertical-grid * 5.5;
    }
    .content {
      .instruction-text {
        h1 {
          line-height: 200%;
        }
        padding-bottom: @vertical-grid / 2;
      }
      #input-coupon {
        text-align: center;
      }
    }
  }
  .waiting-coupon {
    .banner {
      margin-bottom: -@vertical-grid * 6.5;
    }
  }
}

section#launch {
  .column {
    .content {
      div#email {
        padding-bottom: @vertical-grid;
      }
    }
  }
}

#edit-page {
  height: 100%;
  overflow-y: hidden;
  section#edit-task, section#edit-note, section#edit-item, section#edit-context, section#edit-list {
    height: 100%;
    overflow-y: auto;
    .content-container {
      height: 100%;
      overflow-y: auto;
      textarea {
        padding-bottom: 10px;
      }
    }
  }
}

section#welcome {
  max-width: 350px;
  .column {
    overflow-y: auto;
    .banner {
      padding-bottom: @vertical-grid;
      span {
        width: 200px;
        display: block;
        text-align: center;
        .center-horizontally;
      }
      padding-top: @vertical-grid * 1.5;
    }
    .content {
      text-align: center;
      line-height: @vertical-grid-half;
      #welcome-instructions {
        padding-bottom: @vertical-grid;
      }
      #welcome-store-buttons{
        padding-bottom: @vertical-grid;
      }
      #welcome-continue-link{
        font-size: @small-font-size;
      }
    }
  }
}

section#forgot, section#verify {
  .column {
    .banner {
      margin-bottom: -@vertical-grid * 7.5;
    }
    .content {
      .instruction-text {
        p {
          height: @vertical-grid / 2;
          vertical-align: middle;
        }
      }
    }
    #instructions-success {
      .instruction-text {
        padding-bottom: @vertical-grid;
      }
    }
  }
}

section#signup {
  .column {
    .banner {
      margin-bottom: -@vertical-grid * 7;
    }
    .content {
      span#agreeText {
        font-size: @small-font-size;
        color: @content;
        line-height: 19px;
        a {
          color: @highlighted-element;
        }
        a:active {
          color: @highlighted-element-pressed;
        }
      }
    }
  }
}

// STATIC PAGES WITH MENU

#account-container, #about-container, #inbox-container, #admin-container {
  height: 100%;
  section#account, section#about, section#inbox, section#admin {
    height: inherit;
    position: relative;
  }
  div#menu-content {
    padding-top: 0;
  }
}

// INBOX

#inbox-container {
  section#inbox {
    #inbox-page-content-container {
      overflow-y: auto;
      padding-bottom: @footer-height;
    }
  }
}

// TASKS TIMELINE

section#tasks-timeline {
  .date-heading {
    position: relative;
  }
  #pull-to-previous, #pull-to-next {
    text-align: center;
    line-height: 200px;
    height: 200px;
    width: 100%;
  }
  #pull-to-previous {
    position: absolute;
    top: -200px;
  }
  .loader {
    color: @default-element;
  }
  .loader-active {
    color: @highlighted-element;
  }
}

